--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ packages = find:
 install_requires =
     dask-image
     napari==0.4.18
-    napari-video
+    napari-video1
     natsort
     numpy
     opencv-python-headless
